<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Droid BTConnect</string>
    <string name="label_discover_devices">Discover Devices</string>
    <string name="label_list_of_devices">List of devices</string>
    <string name="label_scan">Scan</string>
    <string name="label_not_named">Not named</string>
    <string name="label_status">Status</string>
    <string name="label_status_bonded">Status: Paired</string>
    <string name="label_status_not_bonded">Status: Not paired</string>
    <string name="label_status_bonding">Status: Pairing</string>
    <string name="label_device_address">Device address: </string>
	<string name="label_cancel">Cancel</string>
	<string name="label_pair">Pair</string>
	<string name="label_unpair">Unpair</string>
	<string name="label_device_class">Device class</string>
</resources>