<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dip" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <ImageView
            android:id="@+id/imageViewPairStatus"
            android:layout_width="45dip"
            android:layout_height="45dip"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/bluetooth_bonding" />

        <TextView
            android:id="@+id/textViewDeviceName"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/label_not_named"
            android:textSize="17dip"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_status"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_status"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewClass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_status"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom" >

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_cancel" />

        <Button
            android:id="@+id/buttonPair"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_pair" />
    </LinearLayout>

</LinearLayout>